--- a/backend-api/src/main/resources/static/dashboard.html
+++ b/backend-api/src/main/resources/static/dashboard.html
@@ -64,8 +64,7 @@
     <div class="sticky-top container-fluid bg-dark text-light">
         <header class="d-flex justify-content-between align-items-center py-1">
             <a href="../index.html">
-                <img style="width:70px;height:70px" src="images\img_test1_white.png" alt="Logo"
-                    class="img-fluid" />
+                <img style="width:70px;height:70px" src="images/img_test1_white.png" alt="Logo" class="img-fluid" />
             </a>
             <form class="col-md-4 d-flex" role="search" onsubmit="event.preventDefault()">
                 <input class="form-control rounded-pill me-2" type="search" placeholder="Search" aria-label="Search" />
@@ -86,11 +85,21 @@
     </div>
 
     <main class="container py-4 text-dark">
-        <div class="d-flex justify-content-center mb-3">
-            <img class="avatar" src="../images/img_test.png" alt="Profile Avatar" />
+        <div class="text-center mb-4">
+            <img id="currentAvatar" 
+                 src="images/img_test.png" 
+                 onerror="this.src='https://via.placeholder.com/150?text=Profile'"
+                 style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%; border: 4px solid #fff; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" 
+                 alt="Profile">
+            
+            <div class="mt-3">
+                <label for="avatarInput" class="btn btn-sm btn-outline-primary">Change Picture</label>
+                <input type="file" id="avatarInput" style="display: none;" accept="image/*" onchange="handleImageSelect(this)">
+            </div>
+            <button onclick="saveProfileImage()" class="btn btn-primary mt-2">Save Picture</button>
         </div>
 
-        <section class="kpi mb-3">
+        <!-- <section class="kpi mb-3">
             <div class="row g-3">
                 <div class="col-md-4">
                     <div class="card shadow-sm">
@@ -126,7 +135,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <div class="d-flex justify-content-between align-items-center mt-3 mb-2">
             <h2 class="h6 mb-0">All Listings</h2>
@@ -172,9 +181,69 @@
 
         const userId = getCookie("user_id");
         const tableBody = document.getElementById("listingsTableBody");
-        const API_BASE = "http://localhost:8080/api"; 
+        const API_BASE = "http://localhost:8080/api";
+        let selectedFile = null;
 
-        // Load Listings Function
+        // Handle Image Selection
+        function handleImageSelect(input) {
+            if (input.files && input.files[0]) {
+                selectedFile = input.files[0];
+                const reader = new FileReader();
+                reader.onload = e => {
+                    const img = document.getElementById("currentAvatar");
+                    if (img) img.src = e.target.result;
+                };
+                reader.readAsDataURL(selectedFile);
+            }
+        }
+
+        // Save Profile Image
+        async function saveProfileImage() {
+            if (!selectedFile || !userId) {
+                alert("Please select an image first.");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append("file", selectedFile);
+
+            try {
+                const res = await fetch(`${API_BASE}/users/${userId}/image`, {
+                    method: "POST",
+                    body: formData
+                });
+
+                if (res.ok) {
+                    alert("Profile picture updated!");
+                    loadUserAvatar(); // Refresh to confirm
+                } else {
+                    alert("Failed to upload image.");
+                }
+            } catch (e) {
+                console.error(e);
+                alert("Error connecting to server.");
+            }
+        }
+
+        // Load User Avatar
+        async function loadUserAvatar() {
+            if (!userId) return;
+            try {
+                const res = await fetch(`${API_BASE}/users/${userId}`);
+                if (res.ok) {
+                    const user = await res.json();
+                    const avatarImg = document.getElementById("currentAvatar");
+
+                    if (user.profilePictureUrl && avatarImg) {
+                        avatarImg.src = user.profilePictureUrl;
+                    }
+                }
+            } catch (e) {
+                console.error("Failed to load avatar", e);
+            }
+        }
+
+        // Load Listings
         async function loadListings() {
             if (!userId) {
                 tableBody.innerHTML = `<tr><td colspan="8" class="text-center text-danger">Please <a href="../index.html">login</a> to view listings.</td></tr>`;
@@ -182,12 +251,12 @@
             }
 
             try {
-                // Fetch listings by User ID
                 const response = await fetch(`${API_BASE}/listings/user/${userId}`);
+                
                 if (response.status === 404 || response.status === 500) {
                     alert("Session expired, please login again.");
-                    document.cookie = "user_id=; path=/; max-age=0"; // Delete cookie
-                    window.location.href = "../index.html"; // Redirect to login
+                    document.cookie = "user_id=; path=/; max-age=0";
+                    window.location.href = "../index.html"; 
                     return;
                 }
 
@@ -202,9 +271,9 @@
             }
         }
 
-        // Render Listings in Table
+        // Render Listings
         function renderListings(listings) {
-            tableBody.innerHTML = ""; // Clear loading state
+            tableBody.innerHTML = ""; 
 
             if (listings.length === 0) {
                 tableBody.innerHTML = `<tr><td colspan="8" class="text-center">No listings found. Create one!</td></tr>`;
@@ -212,25 +281,27 @@
             }
 
             listings.forEach(listing => {
-                // Determine the main product; Backend structure: Listing -> has many Products
                 const product = (listing.products && listing.products.length > 0) ? listing.products[0] : null;
-
-                if (!product) return; // Skip empty listings
+                if (!product) return; 
 
                 const row = document.createElement("tr");
                 const datePosted = new Date(listing.dateCreated).toLocaleDateString();
                 const badgeClass = listing.active ? 'text-bg-success' : 'text-bg-secondary';
                 const statusText = listing.active ? 'Active' : 'Hidden';
 
-                // Placeholder image if string is empty or invalid
-                const imgSrc = product.imageURLString || "https://via.placeholder.com/100?text=No+Image";
+                // Image Logic
+                let imgSrc = product.imageURLString;
+                if (!imgSrc || imgSrc === "pending_upload") {
+                    imgSrc = "images/img_test1_white.png"; // Fallback
+                }
 
                 row.innerHTML = `
                     <td>${product.title}</td>
-                    <td><img class="thumb" alt="${product.title}" src="${imgSrc}" onerror="this.src='https://via.placeholder.com/100?text=Error'"></td>
+                    <td><img class="thumb" alt="${product.title}" src="${imgSrc}" onerror="this.src='images/img_test1_white.png'" style="width:60px;height:60px;object-fit:cover;"></td>
                     <td>${listing.category}</td>
                     <td>$${product.price}</td>
-                    <td>0</td> <td><span class="badge ${badgeClass} status-badge">${statusText}</span></td>
+                    <td>0</td> 
+                    <td><span class="badge ${badgeClass} status-badge">${statusText}</span></td>
                     <td>${datePosted}</td>
                     <td class="text-end actions-col">
                         <div class="d-inline-flex gap-2 text-nowrap">
@@ -243,7 +314,7 @@
             });
         }
 
-        // Delete Listing Handler
+        // Delete Listing
         async function handleDelete(id) {
             if (!confirm("Are you sure you want to delete this listing?")) return;
 
@@ -253,7 +324,7 @@
                 });
 
                 if (response.ok) {
-                    loadListings(); // Refresh table
+                    loadListings(); 
                 } else {
                     alert("Failed to delete. Please try again.");
                 }
@@ -263,8 +334,9 @@
             }
         }
 
-        // Initial Load
+        // Initialize
         loadListings();
+        loadUserAvatar();
     </script>
 </body>
 </html>
